<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    tools:context="in.co.shopster.shopster_delivery_client.activities.DynamicApiHostConfigActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:text="@string/label_api_host"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/edit_api_host_address"
            android:inputType="text"
            android:hint="@string/hint_api_host"
            />

        <!--<Button-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="50dp"-->
            <!--android:id="@+id/btn_configure_host"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:text="@string/label_configure_api_host"-->
            <!--/>-->

        <info.hoang8f.widget.FButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/btn_configure_host"
            android:layout_marginTop="10dp"
            android:text="@string/label_configure_api_host"
            android:textColor="@color/white"
            android:layout_gravity="left|bottom"
            android:layout_marginBottom="18dp"
            fbutton:buttonColor="@color/fbutton_color_carrot"
            fbutton:shadowColor="@color/fbutton_color_carrot"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="5dp"
            fbutton:cornerRadius="5dp"
            />

    </LinearLayout>




</android.support.design.widget.CoordinatorLayout>
